--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/DS_Store
+/.DS_Store
+/public/css/.sass-cache
+/public/css/main.css.map
+/public/css/main.css
+/public/.DS_Store
